--- a/index.html
+++ b/index.html
@@ -11,58 +11,66 @@
   <body>
     <div class="slider">
       <div class="slides">
+        <!-- Slide Images -->
+        <div class="slide first">
+          <div class="slide-card">
+            <p class="slide-title">
+              Em Meus Pedidos, encontre seu pedido e clique em Detalhes do
+              Pedido.
+            </p>
+            <div class="slide-body">
+              <img src="/img/passo1.gif" alt="body 01" />
+            </div>
+          </div>
+        </div>
+        <div class="slide">
+          <div class="slide-card">
+            <p class="slide-title">
+              Clique no botão 2ª Via de Nota Fiscal localizado na parte superior
+              da página.
+            </p>
+            <div class="slide-body">
+              <img src="/img/passo2.gif" alt="body 02" />
+            </div>
+          </div>
+        </div>
+        <div class="slide">
+          <div class="slide-card">
+            <p class="slide-title">
+              Agora copie a chave da NF, com ela você consegue emitir sua nota
+              no Portal NF-e.
+            </p>
+            <div class="slide-body">
+              <img src="/img/passo2.gif" alt="body 03" />
+            </div>
+          </div>
+        </div>
+        <!-- End Slide Images -->
+      </div>
+
+      <div class="navigation">
         <!-- Radio Buttons -->
         <input type="radio" name="radio-btn" id="radio1" />
         <input type="radio" name="radio-btn" id="radio2" />
         <input type="radio" name="radio-btn" id="radio3" />
-        <input type="radio" name="radio-btn" id="radio4" />
         <!-- End Radio Buttons -->
-
-        <!-- Slide Images -->
-        <div class="slide first">
-          <img
-            src="https://wallpaperaccess.com/full/3087990.jpg"
-            alt="Image 1"
-          />
-        </div>
-        <div class="slide">
-          <img
-            src="http://www.osmais.com/wallpapers/201209/dia-de-chuva-wallpaper-1280x720.jpg"
-            alt="Image 2"
-          />
-        </div>
-        <div class="slide">
-          <img
-            src="https://wallpapersmug.com/download/1280x720/13377a/cyberpunk-city-buildings-art.jpg"
-            alt="Image 3"
-          />
-        </div>
-        <div class="slide">
-          <img
-            src="http://wallpapers.net/nature-at-its-finest-hd-wallpaper/download/1280x720.jpg"
-            alt="Image 4"
-          />
-        </div>
-        <!-- End Slide Images -->
 
         <!-- Navigation-auto -->
         <div class="navigation-auto">
           <div class="auto-btn1"></div>
           <div class="auto-btn2"></div>
           <div class="auto-btn3"></div>
-          <div class="auto-btn4"></div>
         </div>
         <!-- End Navigation-auto -->
-      </div>
 
-      <div class="manual-navigation">
-        <label for="radio1" class="manual-btn"></label>
-        <label for="radio2" class="manual-btn"></label>
-        <label for="radio3" class="manual-btn"></label>
-        <label for="radio4" class="manual-btn"></label>
+        <div class="manual-navigation">
+          <label for="radio1" class="manual-btn"></label>
+          <label for="radio2" class="manual-btn"></label>
+          <label for="radio3" class="manual-btn"></label>
+        </div>
       </div>
     </div>
 
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
   </body>
 </html>
